output
src/do_main.cpp: In lambda function:
src/do_main.cpp:17:25: error: 'digitalRead' was not declared in this scope
   17 |                 int i = digitalRead(9);
      |                         ^~~~~~~~~~~
src/do_main.cpp:18:17: error: 'delay' was not declared in this scope
   18 |                 delay(20);
      |                 ^~~~~
src/do_main.cpp:23:21: error: 'Serial' was not declared in this scope
   23 |                     Serial.println("now_is_auto_play is changed to " + String(now_is_auto_play));
      |                     ^~~~~~
src/do_main.cpp:23:72: error: 'String' was not declared in this scope
   23 |                     Serial.println("now_is_auto_play is changed to " + String(now_is_auto_play));
      |                                                                        ^~~~~~
src/do_main.cpp: In function 'void ui_mian()':
src/do_main.cpp:12:5: error: 'xTaskCreatePinnedToCore' was not declared in this scope
   12 |     xTaskCreatePinnedToCore(
      |     ^~~~~~~~~~~~~~~~~~~~~~~
src/do_main.cpp: In lambda function:
src/do_main.cpp:39:21: error: 'delay' was not declared in this scope
   39 |                     delay(1000);
      |                     ^~~~~
src/do_main.cpp:44:21: error: 'delay' was not declared in this scope
   44 |                     delay(2000);
      |                     ^~~~~
src/do_main.cpp: In function 'void auto_play()':
src/do_main.cpp:32:5: error: 'xTaskCreatePinnedToCore' was not declared in this scope
   32 |     xTaskCreatePinnedToCore(
      |     ^~~~~~~~~~~~~~~~~~~~~~~
*** [.pio/build/esp32-c3-devkitc-02/src/do_main.cpp.o] Error 1